Using a custom plugin to generate a list of runtime injections

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,10 @@
 			"name": "Launch Webpack Config",
 			"cwd": "${workspaceRoot}",
 			"program": "${workspaceRoot}/node_modules/webpack-cli/bin/webpack.js",
-			// "args": [
-			// 	"--config=${file}"
-			// ]
+			"args": [
+                "--mode",
+                "development"
+			]
         }
     ]
 }
